--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,11 +24,19 @@ body {
   margin: 0px;
   padding: 0px;
   display: flex;
-  
+}
+
+.column{
+  background-color: rgb(255, 255, 255);
 }
 
 .black{
-  background-color: black;
-  color:aqua;
+  background-color: rgb(0, 0, 0);
 }
+
+.rainbow{
+  
+}
+
+
 
